--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# 리소스 파일 PUSH 금지
-/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
